<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<resources>
    <string name="app_name">those10_s_application</string>
    <string name="loading">Loading…</string>
    <string name="no_internet_connection">No internet connection!</string>
    <string name="lbl_i">I</string>
    <string name="lbl_j">j</string>
    <string name="lbl_k">k</string>
    <string name="lbl_l">l</string>
    <string name="lbl_m">m</string>
    <string name="lbl_mr_unknown">Mr. unknown</string>
    <string name="lbl_n">n</string>
    <string name="lbl_o">o</string>
    <string name="msg_cooperation_lis">Cooperation List</string>
    <string name="lbl_p">p</string>
    <string name="msg_hi_how_are_you2">Hi, how are you? I am Dr. XXX, hope you have a good day, and if you have issue, please contect me anytime. </string>
    <string name="msg_comfirm_passwor">Comfirm password</string>
    <string name="lbl_q">q</string>
    <string name="lbl_user_name">User Name</string>
    <string name="lbl_r">r</string>
    <string name="msg_general_setting">General Settings</string>
    <string name="lbl_s">s</string>
    <string name="lbl_t">t</string>
    <string name="lbl_u">u</string>
    <string name="lbl_v">v</string>
    <string name="lbl_w">w</string>
    <string name="lbl_reset_password">Reset password</string>
    <string name="lbl_x">x</string>
    <string name="lbl_y">y</string>
    <string name="lbl_epping_age_care"> Epping age care</string>
    <string name="lbl_z">z</string>
    <string name="msg_redcross_aged_c">Redcross aged care centre</string>
    <string name="lbl_patient_list">Patient list</string>
    <string name="lbl_we">we</string>
    <string name="lbl_help_center">Help Center</string>
    <string name="lbl_more_info">more info</string>
    <string name="lbl_comfirm">Comfirm</string>
    <string name="msg_zekeriya_villan">Zekeriya Villanueva</string>
    <string name="lbl_dark_mode">Dark Mode</string>
    <string name="msg_open_hour_9_00">open hour: 9:00 am -18:00 pm
Location: burwood one shopping center</string>
    <string name="lbl_1_hrs_ago">1 hrs ago.</string>
    <string name="lbl_dr_kate">Dr. Kate</string>
    <string name="msg_moorabin_aged_c">Moorabin aged care centre</string>
    <string name="lbl_1m_ago">1m ago.</string>
    <string name="lbl_burwood_vic">Burwood VIC</string>
    <string name="lbl_12_30_13_00">12:30 - 13:00</string>
    <string name="lbl_location">Location</string>
    <string name="lbl_return">return</string>
    <string name="lbl_stephan_ewart">Stephan Ewart</string>
    <string name="msg_by_signing_up2">By signing up, you agree to Photo\u2019s </string>
    <string name="lbl_a">a</string>
    <string name="lbl_b">b</string>
    <string name="msg_personal_inform">Personal Information List</string>
    <string name="lbl_c">c</string>
    <string name="lbl_d">d</string>
    <string name="lbl_e">e</string>
    <string name="msg_hi_steven_how">Hi, Steven, how are you today, can i ask you some questions?</string>
    <string name="lbl_f">f</string>
    <string name="lbl_g">g</string>
    <string name="lbl_h">h</string>
    <string name="lbl_29_april_2023">29 april 2023</string>
    <string name="lbl_mr_unknow2">Mr.unknow</string>
    <string name="msg_priscilla_spezi">Priscilla Speziale</string>
    <string name="lbl_start">START</string>
    <string name="lbl_tom_papam2">Tom Papam</string>
    <string name="lbl_teen_mode">Teen Mode</string>
    <string name="lbl_capture">Capture</string>
    <string name="lbl_video">video</string>
    <string name="lbl_123">123</string>
    <string name="msg_replace_the_pic">Replace the picture</string>
    <string name="lbl_welcome">Welcome</string>
    <string name="lbl_voice">voice</string>
    <string name="lbl_password">Password</string>
    <string name="lbl_marie_macarthy">    Marie Macarthy</string>
    <string name="lbl_my_addresses">My Addresses</string>
    <string name="msg_start_your_heal">Start your healthy life</string>
    <string name="msg_type_a_message">Type a message. . .</string>
    <string name="lbl_radoslaw_brogan">Radoslaw Brogan</string>
    <string name="lbl_i_m">I\u2019m</string>
    <string name="msg_user_name_user">User Name/User Number</string>
    <string name="msg_back_to_mainpag">Back to mainpage</string>
    <string name="lbl_rate_our_app">Rate Our App</string>
    <string name="msg_notification_se">Notification Settings</string>
    <string name="msg_dandenong_care">Dandenong care centre</string>
    <string name="lbl_kiran_smith2">Kiran smith</string>
    <string name="lbl_kiran_smith">    Kiran smith</string>
    <string name="lbl_profile_set">Profile Set</string>
    <string name="lbl_accuracy_by">accuracy by </string>
    <string name="lbl_see_more">    See more  &gt;</string>
    <string name="lbl_30m_ago">30m ago.</string>
    <string name="lbl_3_m_ago">3 m ago.</string>
    <string name="lbl_lina_hoek">Lina Hoek</string>
    <string name="lbl_confirm">Confirm</string>
    <string name="lbl_menu">Menu</string>
    <string name="lbl_heng_yun_chou">Heng Yun Chou</string>
    <string name="lbl_finish">Finish</string>
    <string name="lbl_log_in">Log in</string>
    <string name="lbl_create_account">Create Account</string>
    <string name="lbl_about_us">About Us</string>
    <string name="lbl_2_hrs_ago">2 hrs ago.</string>
    <string name="msg_privacy_setting">Privacy Settings</string>
    <string name="msg_tarneit_valley">Tarneit valley care community</string>
    <string name="lbl_sign_up">SIGN UP</string>
    <string name="lbl_26_c">26°C</string>
    <string name="lbl_tom_papam">    Tom Papam</string>
    <string name="lbl_and"> and </string>
    <string name="lbl_privacy_policy">Privacy Policy</string>
    <string name="msg_contact_current">Contact current location\u2019s office</string>
    <string name="msg_increase_your_d">Increase your diagnostic                    </string>
    <string name="lbl_register">Register</string>
    <string name="msg_account_securit">Account Security</string>
    <string name="lbl_warming">WARMING </string>
    <string name="lbl_pain_rate">Pain Rate</string>
    <string name="msg_redcross_care_c"> Redcross care centre</string>
    <string name="lbl_log_in2">LOG IN</string>
    <string name="lbl_photo">photo</string>
    <string name="lbl_dashboard">Dashboard</string>
    <string name="lbl_search">Search</string>
    <string name="lbl_dr_steven">Dr. Steven</string>
    <string name="lbl_13_30_14_00">13:30 - 14:00</string>
    <string name="lbl_2">2</string>
    <string name="lbl_30_april_2023">30 april 2023</string>
    <string name="msg_forget_your_pas">Forget your password?</string>
    <string name="msg_by_signing_up">By signing up, you agree to Photo\u2019s Terms of Service and Privacy Policy</string>
    <string name="msg_aged_care_locat">Aged care locations</string>
    <string name="lbl_dr_martha">Dr. Martha</string>
    <string name="lbl_3_hrs_ago">3 hrs ago.</string>
    <string name="msg_burwood_vic_mel">Burwood VIC Melbourne</string>
    <string name="msg_make_sure_you_a">Make sure you are in an emergency and we will help you dial the emergency number.</string>
    <string name="msg_epping_care_cen">Epping care centre</string>
    <string name="lbl_space">space</string>
    <string name="lbl_notification">Notification</string>
    <string name="msg_terms_of_servic">Terms of Service</string>
    <string name="msg_hi_how_are_you">Hi, how are you? I am Dr. XXX, hope you have a good day, and if you have issue, please contect me anytime.</string>
    <string name="lbl_settings">Settings</string>
    <string name="lbl_i2">i</string>
    <string name="lbl_mr_unknow">Mr. unknow</string>
    <string name="lbl_rick_inzelo">    Rick inzelo</string>
    <string name="msg_upcoming_consul">    Upcoming consultations</string>
    <string name="lbl_see_more2">See more  &gt;</string>
    <string name="lbl_patients">Patients</string>
    <string name="msg_introduction_ab">Introduction(About youself)</string>
    <string name="logo">Logo</string>
    <string name="home">Home</string>
    <string name="patientface">PatientFace</string>
    <string name="katty">Katty</string>
    <string name="PatientName">Kate</string>
    <string name="PatientDOB">21 March 1944</string>
    <string name="ExitButton"><![CDATA[Save & Exit]]></string>
    <string name="PatientGender">Female</string>
    <string name="legend">Legend</string>
    <string name="Minimum">0</string>
    <string name="Maximum">16</string>
    <string name="arrow">Arrow</string>
    <string name="Pain_level">Pain Level:</string>
    <string name="description7to11">A score between 7 ~ 11 is classified as Mild pain</string>
    <string name="CommonDescribe">Assessed by Rose Betty</string>
    <string name="_16">16</string>
</resources>
