<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="keyboardRowModel" type="com.painrate.modules.keyboard.data.model.KeyboardRowModel"/>
    </data>
    <LinearLayout android:id="@+id/linearRow"
        android:layout_height="wrap_content"
        android:layout_width="match_parent" android:orientation="horizontal">
        <TextView android:ellipsize="end" android:id="@+id/txtKey"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.1" android:layout_width="0dp"
            android:paddingBottom="@dimen/_1pxv"
            android:paddingStart="@dimen/_10pxh"
            android:paddingTop="@dimen/_8pxv" android:singleLine="true"
            android:text="@{keyboardRowModel.txtKey}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_q"/>
        <TextView android:ellipsize="end" android:id="@+id/txtKeyOne"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.1" android:layout_width="0dp"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingStart="@dimen/_6pxh"
            android:paddingTop="@dimen/_5pxv" android:singleLine="true"
            android:text="@{keyboardRowModel.txtKeyOne}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_w"/>
        <TextView android:ellipsize="end" android:id="@+id/txtKeyTwo"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.1" android:layout_width="0dp"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingStart="@dimen/_10pxh"
            android:paddingTop="@dimen/_5pxv" android:singleLine="true"
            android:text="@{keyboardRowModel.txtKeyTwo}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_e"/>
        <TextView android:ellipsize="end" android:id="@+id/txtKeyThree"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.1" android:layout_width="0dp"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingEnd="@dimen/_10pxh"
            android:paddingStart="@dimen/_12pxh"
            android:paddingTop="@dimen/_5pxv" android:singleLine="true"
            android:text="@{keyboardRowModel.txtKeyThree}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_r"/>
        <TextView android:ellipsize="end" android:id="@+id/txtKeyFour"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.1" android:layout_width="0dp"
            android:paddingBottom="@dimen/_5pxv"
            android:paddingEnd="@dimen/_10pxh"
            android:paddingStart="@dimen/_10pxh"
            android:paddingTop="@dimen/_4pxv" android:singleLine="true"
            android:text="@{keyboardRowModel.txtKeyFour}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_t"/>
        <TextView android:ellipsize="end" android:id="@+id/txtKeyFive"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.1" android:layout_width="0dp"
            android:paddingBottom="@dimen/_1pxv"
            android:paddingStart="@dimen/_9pxh"
            android:paddingTop="@dimen/_8pxv" android:singleLine="true"
            android:text="@{keyboardRowModel.txtKeyFive}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_y"/>
        <TextView android:ellipsize="end" android:id="@+id/txtKeySix"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.1" android:layout_width="0dp"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingStart="@dimen/_10pxh"
            android:paddingTop="@dimen/_5pxv" android:singleLine="true"
            android:text="@{keyboardRowModel.txtKeySix}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_u"/>
        <TextView android:ellipsize="end" android:id="@+id/txtKeySeven"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.1" android:layout_width="0dp"
            android:paddingBottom="@dimen/_6pxv"
            android:paddingEnd="@dimen/_13pxh"
            android:paddingStart="@dimen/_13pxh"
            android:paddingTop="@dimen/_3pxv" android:singleLine="true"
            android:text="@{keyboardRowModel.txtKeySeven}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_i2"/>
        <TextView android:ellipsize="end" android:id="@+id/txtKeyEight"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_weight="0.1" android:layout_width="0dp"
            android:paddingBottom="@dimen/_4pxv"
            android:paddingStart="@dimen/_10pxh"
            android:paddingTop="@dimen/_5pxv" android:singleLine="true"
            android:text="@{keyboardRowModel.txtKeyEight}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_o"/>
        <TextView android:ellipsize="end" android:id="@+id/txtKeyNine"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_1pxv"
            android:layout_marginStart="@dimen/_5pxh"
            android:layout_weight="0.1" android:layout_width="0dp"
            android:paddingBottom="@dimen/_1pxv"
            android:paddingStart="@dimen/_10pxh"
            android:paddingTop="@dimen/_8pxv" android:singleLine="true"
            android:text="@{keyboardRowModel.txtKeyNine}"
            style="@style/txtSolidRounded" tools:text="@string/lbl_p"/>
    </LinearLayout>
</layout>
