<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="loginPageVM" type="com.painrate.modules.loginpage.data.viewmodel.LoginPageVM"/>
    </data>
    <LinearLayout android:id="@+id/linearLoginpage"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <ImageView android:gravity="start"
            android:id="@+id/imageWelcomelog"
            android:layout_height="@dimen/_163pxv"
            android:layout_width="match_parent"
            android:scaleType="fitXY"
            imageRes="@{@drawable/img_welcomelog}"
            tools:ignore="ContentDescription" tools:src="@drawable/img_welcomelog"/>
        <LinearLayout android:gravity="start"
            android:id="@+id/linearRowellipsefour"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_326pxv"
            android:layout_marginEnd="@dimen/_15pxh"
            android:layout_marginStart="@dimen/_15pxh"
            android:layout_marginTop="@dimen/_1pxv"
            android:layout_width="match_parent" android:orientation="horizontal">
            <ImageView android:id="@+id/imageEllipseFour"
                android:layout_height="@dimen/_31pxh"
                android:layout_marginBottom="@dimen/_373pxv"
                android:layout_marginTop="@dimen/_1pxv"
                android:layout_width="@dimen/_35pxh"
                android:scaleType="fitXY"
                android:src="@drawable/img_ellipse4"
                tools:ignore="ContentDescription" tools:src="@drawable/img_ellipse4"/>
            <LinearLayout android:gravity="start"
                android:id="@+id/linearColumnlogin"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_4pxh"
                android:layout_weight="0.9" android:layout_width="0dp" android:orientation="vertical">
                <TextView android:ellipsize="end"
                    android:id="@+id/txtLogin"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_10pxh"
                    android:layout_marginStart="@dimen/_2pxh"
                    android:layout_width="wrap_content"
                    android:singleLine="true"
                    android:text="@{loginPageVM.loginPageModel.txtLogin}"
                    style="@style/txtComfortaaregular36" tools:text="@string/lbl_log_in"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnUserNameuserNumber"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_15pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@string/msg_user_name_user"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded" tools:text="@string/msg_user_name_user"/>
                <androidx.appcompat.widget.AppCompatButton
                    android:ellipsize="end" android:gravity="center"
                    android:id="@+id/btnPassword"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_26pxv"
                    android:layout_width="match_parent"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:paddingBottom="@dimen/_15pxv"
                    android:paddingEnd="@dimen/_30pxh"
                    android:paddingStart="@dimen/_30pxh"
                    android:paddingTop="@dimen/_15pxv"
                    android:singleLine="true"
                    android:text="@string/lbl_password"
                    android:textAllCaps="false"
                    style="@style/btnSolidRounded_1" tools:text="@string/lbl_password"/>
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearRegister"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_35pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylecornerRadius">
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnLogInOne"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.13"
                        android:lineSpacingExtra="@dimen/_8pxh"
                        android:paddingBottom="@dimen/_18pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_18pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_log_in2"
                        android:textAllCaps="false"
                        style="@style/btnGradientRounded" tools:text="@string/lbl_log_in2"/>
                </LinearLayout>
                <LinearLayout android:gravity="center_horizontal"
                    android:id="@+id/linearLogin"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_1pxh"
                    android:layout_marginTop="@dimen/_30pxv"
                    android:layout_width="match_parent"
                    android:orientation="vertical" style="@style/groupStylecornerRadius">
                    <androidx.appcompat.widget.AppCompatButton
                        android:ellipsize="end" android:gravity="center"
                        android:id="@+id/btnCreateAccount"
                        android:layout_height="match_parent"
                        android:layout_width="match_parent"
                        android:letterSpacing="0.13"
                        android:lineSpacingExtra="@dimen/_8pxh"
                        android:paddingBottom="@dimen/_18pxv"
                        android:paddingEnd="@dimen/_30pxh"
                        android:paddingStart="@dimen/_30pxh"
                        android:paddingTop="@dimen/_18pxv"
                        android:singleLine="true"
                        android:text="@string/lbl_create_account"
                        android:textAllCaps="false"
                        style="@style/btnGradientRounded" tools:text="@string/lbl_create_account"/>
                </LinearLayout>
                <TextView android:ellipsize="end"
                    android:id="@+id/txtForgetyourpas"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/_89pxh"
                    android:layout_marginStart="@dimen/_89pxh"
                    android:layout_marginTop="@dimen/_23pxv"
                    android:layout_width="wrap_content"
                    android:lineSpacingExtra="@dimen/_6pxh"
                    android:singleLine="true"
                    android:text="@{loginPageVM.loginPageModel.txtForgetyourpas}"
                    style="@style/txtPoppinsregular12" tools:text="@string/msg_forget_your_pas"/>
                <View android:background="@color/gray_803"
                    android:id="@+id/lineVectorFour"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="@dimen/_1pxv"
                    android:layout_marginBottom="@dimen/_1pxv"
                    android:layout_marginEnd="@dimen/_89pxh"
                    android:layout_marginStart="@dimen/_89pxh" android:layout_width="@dimen/_138pxh"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>
