<?xml version="1.0" encoding="UTF-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable name="resetPasswordVM" type="com.painrate.modules.resetpassword.data.viewmodel.ResetPasswordVM"/>
    </data>
    <LinearLayout android:id="@+id/linearResetpassword"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical" style="@style/groupStylewhite_A700">
        <FrameLayout android:id="@+id/frameStacklogin"
            android:layout_gravity="start"
            android:layout_height="@dimen/_65pxv"
            android:layout_marginEnd="@dimen/_27pxh"
            android:layout_marginStart="@dimen/_27pxh"
            android:layout_marginTop="@dimen/_70pxv" android:layout_width="@dimen/_316pxh">
            <TextView android:ellipsize="end"
                android:gravity="top|start" android:id="@+id/txtLogin"
                android:layout_gravity="bottom|end"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_10pxh"
                android:layout_marginTop="@dimen/_10pxv"
                android:layout_width="match_parent"
                android:singleLine="true"
                android:text="@{resetPasswordVM.resetPasswordModel.txtLogin}"
                style="@style/txtComfortaaregular36" tools:text="@string/lbl_reset_password"/>
            <View
                android:background="@drawable/rectangle_bg_white_a700_radius_17_5"
                android:id="@+id/viewEllipseFour"
                android:layout_gravity="top|start"
                android:layout_height="@dimen/_31pxv"
                android:layout_marginBottom="@dimen/_10pxv"
                android:layout_marginEnd="@dimen/_10pxh" android:layout_width="@dimen/_35pxh"/>
        </FrameLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnUserNameuserNumber"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_42pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/msg_user_name_user"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/msg_user_name_user"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnResetPassword"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/lbl_reset_password"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/lbl_reset_password"/>
        <androidx.appcompat.widget.AppCompatButton
            android:ellipsize="end" android:gravity="center"
            android:id="@+id/btnComfirmPasswordOne"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_40pxh"
            android:layout_marginStart="@dimen/_40pxh"
            android:layout_marginTop="@dimen/_21pxv"
            android:layout_width="match_parent"
            android:lineSpacingExtra="@dimen/_6pxh"
            android:paddingBottom="@dimen/_15pxv"
            android:paddingEnd="@dimen/_30pxh"
            android:paddingStart="@dimen/_30pxh"
            android:paddingTop="@dimen/_15pxv" android:singleLine="true"
            android:text="@string/msg_comfirm_passwor"
            android:textAllCaps="false" style="@style/btnSolidRounded_1" tools:text="@string/msg_comfirm_passwor"/>
        <LinearLayout android:gravity="center_horizontal"
            android:id="@+id/linearRegister"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_20pxv"
            android:layout_marginEnd="@dimen/_41pxh"
            android:layout_marginStart="@dimen/_41pxh"
            android:layout_marginTop="@dimen/_24pxv"
            android:layout_width="match_parent"
            android:orientation="vertical" style="@style/groupStylecornerRadius">
            <androidx.appcompat.widget.AppCompatButton
                android:ellipsize="end" android:gravity="center"
                android:id="@+id/btnComfirm"
                android:layout_height="match_parent"
                android:layout_width="match_parent"
                android:letterSpacing="0.13"
                android:lineSpacingExtra="@dimen/_8pxh"
                android:paddingBottom="@dimen/_18pxv"
                android:paddingEnd="@dimen/_30pxh"
                android:paddingStart="@dimen/_30pxh"
                android:paddingTop="@dimen/_18pxv"
                android:singleLine="true"
                android:text="@string/lbl_comfirm"
                android:textAllCaps="false"
                style="@style/btnGradientRounded" tools:text="@string/lbl_comfirm"/>
        </LinearLayout>
    </LinearLayout>
</layout>
